[package]
name = "actix-ogn"
version = "0.3.0"
authors = ["Tobias Bieniek <tobias.bieniek@gmail.com>"]
description = "OpenGliderNetwork client based on actix"
readme = "README.md"
keywords = ["ogn", "actix", "aprs", "openglidernetwork", "glider"]
homepage = "https://github.com/Turbo87/actix-ogn/"
repository = "https://github.com/Turbo87/actix-ogn.git"
license = "MIT/Apache-2.0"
exclude = [".gitignore", ".travis.yml"]

[dependencies]
actix = "0.8"
backoff = "0.1.2"
log = "0.4"
tokio-codec = "0.1"
tokio-io = "0.1"
tokio-tcp = "0.1"

[dev-dependencies]
pretty_env_logger = "0.3"
