[package]
name = "actix-ogn"
version = "0.4.0"
edition = "2018"
authors = ["Tobias Bieniek <tobias.bieniek@gmail.com>"]
description = "OpenGliderNetwork client based on actix"
readme = "README.md"
keywords = ["ogn", "actix", "aprs", "openglidernetwork", "glider"]
homepage = "https://github.com/Turbo87/actix-ogn/"
repository = "https://github.com/Turbo87/actix-ogn.git"
license = "MIT/Apache-2.0"
exclude = [".gitignore", ".travis.yml"]

[dependencies]
actix = "0.13.0"
actix-service = "2.0.2"
actix-tls = "3.0.3"
backoff = "0.2.1"
log = "0.4"
tokio = { version = "1.28.0", features = ["rt", "net"] }
tokio-util = { version = "0.7.8", features = ["codec"] }

[dev-dependencies]
pretty_env_logger = "0.4"
